tests/mm0_mmu/fail/bad-sort214.mmu
-- bad modifier order
(sort s214 strict pure free)